--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
     <p class="pill">7. Авторские права</p>
     <ul class="list-tight">
       <li>Публикация чужого контента без согласия автора запрещена. При цитировании или репосте обязательно указывать источник.</li>
-      <li>Использование моих музыкальных произведений разрешено только с указанием авторства:  <i>“Music by Yuriy Leontiev”</i>.</li>
+      <li>Использование музыкальных произведений разрешено только с указанием авторства:  <i>“Music by Yuriy Leontiev”</i>.</li>
       <li>Для коммерческого использования музыки необходимо предварительное письменное согласование с автором.</li>
     </ul>
 
